--- a/client/src/styles/scss/components/_Buttons.scss
+++ b/client/src/styles/scss/components/_Buttons.scss
@@ -17,7 +17,7 @@
 // }
 
 .DeleteBtn {
-  margin-top: $ems--xs!important;
-  margin-bottom: $ems--xs;
+  // margin-top: $ems--xs!important;
+  // margin-bottom: $ems--xs;
   margin-left: $ems--s;
 }
